--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Example Website</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -8,6 +9,8 @@
         <p>Hello World!</p>
 
         <a href="www.google.com">Click me!</a>
-        <img src="OIF.jpg" alt="chicken jockey">
+        <img class = "chicken-jockey" src="OIF.jpg" alt="chicken jockey">
+
+        <a href="otherPage.html">Other Page!</a>
     </body>
-</html>t 
+</html>
